Oracle implementation with oracle magic user. There is still work to do around the user substitution. In particular, cleanup: not being called for some reason